syntax = "proto3";

package gprc;

option go_package = "../grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service TaskHandler {
    rpc List(ListReq) returns (ListTask) {
        option (google.api.http) = {
            get: "/tasks"
        };
    };

    rpc Get(GetReq) returns (Task) {
        option (google.api.http) = {
            get: "/tasks/{id}"
        };
    };

    rpc Create(CreateReq) returns (Task) {
        option (google.api.http) = {
            post: "/tasks/"
            body: "*"
        };
    };

    rpc Update(UpdateReq) returns (Task) {
        option (google.api.http) = {
            put: "/tasks/{id}"
            body: "*"
        };
    };

    rpc DeleteMultiple(DeleteMultipleReq) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/tasks:delete"
        };
    }

    rpc DeleteAll(google.protobuf.Empty) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/tasks"
        };
    }
}

message ListReq {
    int32 page_size         = 1;
    int32 page_token        = 2;
    string name             = 3;
    repeated string tags_id = 4;
    Filter filter           = 5;
}

message GetReq {
    int32 id = 1;
}

message CreateReq {
    string name         = 2;
    string description  = 3;
    bool is_done        = 4;
    repeated int32 tags = 6;
}

message UpdateReq {
    int32 id                    = 1;
    Task new_task_info          = 2;
    repeated int32 tags_added   = 3;
    repeated int32 tags_deleted = 4;
}

message DeleteMultipleReq {
    repeated int32 tasks_id = 1;
}

message ListTask {
    repeated Task tasks = 1;
}

message Task {
    int32 id                               = 1;
    string name                            = 2;
    string description                     = 3;
    bool is_done                           = 4;
    int32 creator_id                       = 5;
    repeated int32 tags                    = 6;
    google.protobuf.Timestamp created_time = 7;
    google.protobuf.Timestamp doned_time   = 8;
}

enum Filter {
    FILTER_UNSPECIFIED = 0;
    TIME_UPDATE_ASC    = 1;
    TIME_UPDATE_DESC   = 2;
    TIME_CREATE_ASC    = 3;
    TIME_CREATE_DESC   = 4;
}